# gems-processing

./: .gitignore  .nojekyll  README.md  _targets.R  adv_eda.qmd  bin_timeseries.R  functions.R  gems_process_all.R  gems_report_plots.docx  gems_seaphox_co2.qmd  matlab_cpsd.R  process_valve.R  pump_eda.qmd  pyproject.toml  rga_eda.qmd
R/: adv.R  adv_processing.R  analyse.R  binning.R  calibration.R  eelgrass.R  flux.R  functions.R  matlab_cpsd.R  par.R  rga.R
_targets/meta/: meta
eda/: adv_eda.qmd  calibration_eda.qmd  check_adv_timestamps.py  check_matlab_gaps.py  pump_eda.qmd  rga_eda.qmd  status_gap_analysis.qmd  valve_eda.py
extras/: eddyflux_batch.py  process_valve.R  process_valve.py
matlab/: README.txt  eddyflux_batch.m  run_eddyflux.sh
reports/: _targets.yaml  custom-reference-doc.docx  eelgrass.qmd  gems.bib  gems_co2_issue.qmd  gems_final_nsf_report.qmd  gems_flux_report.qmd  gems_report_plots.qmd  rga_proposal_plot.qmd
