[project]
name = "gems-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "google-genai>=1.49.0",
    "holoviews>=1.22.1",
    "marimo>=0.17.7",
    "matlab>=0.1",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pytest>=7.0.0",
    "pyzmq>=27.1.0",
    "scipy>=1.11.0",
]
